--- a/website/package.json
+++ b/website/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "thermal-imaging-discovery",
-  "version": "0.1.0",
-  "description": "A Vue.js web application for discovering thermal imaging datasets",
-  "private": true,
+  "name": "thermal-dataset-discovery",
+  "version": "1.0.0",
+  "description": "Dynamic thermal imaging dataset discovery website",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "node scripts/yaml-to-json.js"
   },
+  "keywords": [
+    "thermal-imaging",
+    "datasets",
+    "vue"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "vue": "^3.3.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.0",
-    "vite": "^5.0.0"
+    "js-yaml": "^4.1.0"
   }
 }
